--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -10,6 +10,7 @@ apple: https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?i=10006
 newsletter: |
   Cześć! 👋 ✨
 
+
   **"Prosto i praktycznie wyjaśniamy: AI"** to nie _slogan_, a _misja_! Patoarchitekci dekonstruują świat **LLM**, **GenAI** i **tokenizacji**. Przygotujcie się na _deszcz akronimów_ i _burzę mózgów_!
   
   Od **promptów** po **embeddingi**, od **RAG** do **AI Agents**. Poznajcie _30 kluczowych pojęć_ AI, które zmienią Wasze _integracje z LLM_. **Chunking**, **reranking** i **function calling** już nie będą _czarną magią_!
@@ -17,40 +18,54 @@ newsletter: |
   Chcesz być _AI-native_? Posłuchaj i _zaimplementuj_! Niech Twój kod _szepce_ do modeli, a **chatboty** _śnią_ o _elektrycznych owcach_. **Patoarchitekci** czekają – _odpal ten podcast_ szybciej niż **LLM** generuje _bzdury_!
   
 
+
   
+
 
   ## Odcinek na stronie i materiały do niego ⬇️
 
-  ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/136/)
+
+  ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/136)
+
 
   ➡️ [Spotify](https://open.spotify.com/episode/2CWGR7E8xj0ThLLP8ycFD3)
 
+
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?i=1000683426413)
+
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=KBM5z113x_4)
 
 
   ## Short & Sweet
 
+
   ### Szymon poleca:
+
   []()
+
   
 
 
   ### Łukasz poleca:
+
   []()
+
   
 
 
   ## 🤝 Dołącz do społeczności
+
   Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 
   ## 🏢 Patron odcinka
+
   Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
 
 
   PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
+
 ---
 **"Prosto i praktycznie wyjaśniamy: AI"** to nie _slogan_, a _misja_! Patoarchitekci dekonstruują świat **LLM**, **GenAI** i **tokenizacji**. Przygotujcie się na _deszcz akronimów_ i _burzę mózgów_!
 
