--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -22,6 +22,8 @@ newsletter: |
   
 
 
+
+
   ## Odcinek na stronie i materiały do niego ⬇️
 
 
@@ -37,14 +39,18 @@ newsletter: |
   ➡️ [YouTube](https://www.youtube.com/watch?v=KBM5z113x_4)
 
 
+
+
   ## Short & Sweet
 
 
   ### Szymon poleca:
 
-  []()
+  [Szybko i prosto - jak działa load balancer](https://newsletter.betterstack.com/p/how-dropbox-saved-millions-of-dollars?open=false#%C2%A7the-custom-load-balancer)
 
-  
+  O ile częściej zdarza mi się polecać tu raczej dłuższe artykuły to tym razem coś na "kompiluje się".
+  I to nawet nie cały artykuł a dokładniej to jego kawałek - sekcja "The Custom Load Balancer".
+  Prosty i czytelny opis o tym jak działa load balancer - Coś co każdy ma w u siebie w systemie, a mało kto pomyślał jak to działa.
 
 
   ### Łukasz poleca:
@@ -54,9 +60,13 @@ newsletter: |
   
 
 
+
+
   ## 🤝 Dołącz do społeczności
 
   Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
+
+
 
 
   ## 🏢 Patron odcinka
