--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -44,9 +44,7 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca:
-
-  [Szybko i prosto - jak działa load balancer](https://newsletter.betterstack.com/p/how-dropbox-saved-millions-of-dollars?open=false#%C2%A7the-custom-load-balancer)
+  ### Szymon poleca: [Szybko i prosto - jak działa load balancer](https://newsletter.betterstack.com/p/how-dropbox-saved-millions-of-dollars?open=false#%C2%A7the-custom-load-balancer)
 
   O ile częściej zdarza mi się polecać tu raczej dłuższe artykuły to tym razem coś na "kompiluje się".
   I to nawet nie cały artykuł a dokładniej to jego kawałek - sekcja "The Custom Load Balancer".
