--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -60,10 +60,7 @@ newsletter: |
 
 
 
-  ## 🤝 Dołącz do społeczności
-
-  Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
-
+  ## 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 
 
