--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -27,6 +27,7 @@ newsletter: |
   ## Odcinek na stronie i materiały do niego ⬇️
 
 
+ 
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/136)
 
 
@@ -51,11 +52,9 @@ newsletter: |
   Prosty i czytelny opis o tym jak działa load balancer - Coś co każdy ma w u siebie w systemie, a mało kto pomyślał jak to działa.
 
 
-  ### Łukasz poleca:
+  ### Łukasz poleca: [Czy Oauth 2.0 to tylko standard z nazwy?](https://thenewstack.io/oauth-2-0-a-standard-in-name-only/)
 
-  []()
-
-  
+  Ciekawe rozważania na temat jak faktycznie wyglądają implementacje i jaka jest przyszłość OAuth jako standardu. Warto zerknąć na prace nad OAuth 2.1 oraz GNAP, czyli Grant Negotiation and Authorization Protocol. Szybkie streszczenie o tym też tutaj.
 
 
 
