--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -53,7 +53,10 @@ newsletter: |
 
   ### Łukasz poleca: [Czy Oauth 2.0 to tylko standard z nazwy?](https://thenewstack.io/oauth-2-0-a-standard-in-name-only/)
 
-  Ciekawe rozważania na temat jak faktycznie wyglądają implementacje i jaka jest przyszłość OAuth jako standardu. Warto zerknąć na prace nad OAuth 2.1 oraz GNAP, czyli Grant Negotiation and Authorization Protocol. Szybkie streszczenie o tym też tutaj.
+  Ciekawe rozważania na temat jak faktycznie wyglądają implementacje i jaka jest przyszłość OAuth jako standardu. Warto zerknąć na prace nad OAuth 2.1 oraz GNAP, czyli Grant Negotiation and Authorization Protocol. 
+  - https://oauth.net/2.1/
+  - https://oauth.net/gnap/
+  - https://frontegg.com/blog/gnap
 
 
 
