--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -26,7 +26,7 @@ newsletter: |
 
   ## Odcinek na stronie i materiały do niego ⬇️
 
-   
+
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/136)
 
 
@@ -61,11 +61,11 @@ newsletter: |
 
 
 
-  ## 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
+  ### 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 
 
-  ## 🏢 Patron odcinka
+  ### 🏢 Patron odcinka
 
   Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
 
