--- a/_posts/2025-01-17-137.md
+++ b/_posts/2025-01-17-137.md
@@ -6,7 +6,7 @@ description:
 episode: "137"
 tags: []
 spreaker: 63710426
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-61-post-quantum-cryptography-sli-slo-kpi-reddit/id1477067604?i=1000684349606&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/137)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/4WH7gDzi3nmDOgFBw2qZb7)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-61-post-quantum-cryptography-sli-slo-kpi-reddit/id1477067604?i=1000684349606&uo=4)
 
 
-  ➡️ [YouTube]()
+  ➡️ [YouTube](https://www.youtube.com/watch?v=76sFyeSTU94)
 
 
 
