--- a/_posts/2025-01-24-138.md
+++ b/_posts/2025-01-24-138.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#138 Short #62: Bezpieczeństwo AI Foundry, Tabele S3, Drama Fluttera, Algorytmy Systemowe, Restrykcje GPU'
+title: '#138 Short #62: Bezpieczeństwo AI Foundry, Tabele S3, Drama Fluttera, Algorytmy Systemowe, Restrykcje AI'
 date: 2025-01-24 08:00:00 +0200
 description: 
 episode: "138"
@@ -19,6 +19,9 @@ newsletter: |
   
 
 
+  Dziś mamy dla was kod zniżkowy na konferencję [AzureDay.pl](https://azureday.pl/) - **PatoAzure10**
+  Łukasz maczał palce przy agendzie i jest kilka ciekawych perełek z CfP 😅
+  Teraz czas na nowy odcinek!
   
 
 
@@ -36,7 +39,7 @@ newsletter: |
   ➡️ [Apple Podcasts]()
 
 
-  ➡️ [YouTube](https://youtu.be/_pQ5v7D6Fgw)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=_pQ5v7D6Fgw)
 
 
 
