--- a/_posts/2025-01-24-138.md
+++ b/_posts/2025-01-24-138.md
@@ -6,7 +6,7 @@ description:
 episode: "138"
 tags: []
 spreaker: 63843684
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-62-bezpiecze%C5%84stwo-ai-foundry-tabele-s3-drama/id1477067604?i=1000685267695&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -33,10 +33,10 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/138)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/02Of49D3J1GUcuO0T2sAMz)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-62-bezpiecze%C5%84stwo-ai-foundry-tabele-s3-drama/id1477067604?i=1000685267695&uo=4)
 
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=_pQ5v7D6Fgw)
