--- a/_posts/2025-01-31-139.md
+++ b/_posts/2025-01-31-139.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#139 Short #63: Microsoft Hyperlight, Oracle vs JavaScript, Supply Chain Report, Azure Identity, Re:Invent Sprostowanie'
+title: '#139 Short #63: Microsoft Hyperlight, Oracle vs JavaScript, Supply Chain Report, Re:Invent Sprostowanie'
 date: 2025-01-31 08:00:00 +0200
 description: 
 episode: "139"
@@ -44,14 +44,18 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca: []()
+  ### Szymon poleca: [Jak podejść do optymalizacji kosztowej w chmurze 101](https://blog.allegro.tech/2024/06/cost-optimization-data-pipeline-gcp.html)
 
+  Dziś coś lekkiego i szybkiego do przeczytania. I do tego z naszego ogródka!
+  Jak Allegro podeszło do optymalizacji kosztowej. Coś niby oczywistego, ale jak przyjdzie co do czego to widzę, że ludzie nie wiedzą od której strony zacząć.
+  Wpis lekki, pokazujący liczny, podejście (teza i weryfikacja) i to że czasem trzeba się cofnąć żeby ruszyć się do przodu.
+
+
+  ### Łukasz poleca: [DocumentDB: Open-Source Announcement](https://opensource.microsoft.com/blog/2025/01/23/documentdb-open-source-announcement/)
+
+  "We are excited to announce the official release of DocumentDB—an open-source document database platform and the engine powering the vCore-based Azure Cosmos DB for MongoDB, built on PostgreSQL."
   
-
-
-  ### Łukasz poleca: []()
-
-  
+  Zobaczymy co z tym będzie 😅 Umrze czy będzie rozwijane? A może stan wiecznej agonii jak DAPR?
 
 
 
