--- a/_posts/2025-01-31-139.md
+++ b/_posts/2025-01-31-139.md
@@ -36,7 +36,7 @@ newsletter: |
   ➡️ [Apple Podcasts]()
 
 
-  ➡️ [YouTube](https://youtu.be/qrOC6fhbfZU)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=qrOC6fhbfZU)
 
 
 
