--- a/_posts/2025-01-31-139.md
+++ b/_posts/2025-01-31-139.md
@@ -6,7 +6,7 @@ description:
 episode: "139"
 tags: []
 spreaker: 64032058
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-63-microsoft-hyperlight-oracle-vs-javascript/id1477067604?i=1000687407088&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,10 +30,10 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/139)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/5bXPk6qtnATqO7olws7mCd)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-63-microsoft-hyperlight-oracle-vs-javascript/id1477067604?i=1000687407088&uo=4)
 
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=qrOC6fhbfZU)
