--- a/_posts/2025-02-07-140.md
+++ b/_posts/2025-02-07-140.md
@@ -6,7 +6,7 @@ description:
 episode: "140"
 tags: []
 spreaker: 64221743
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-64-stack-overflow-decline-deep-seek-ai-cloudflare/id1477067604?i=1000689880877&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/140)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/3Mn7CFfCASpJ2PIDiYwCke)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-64-stack-overflow-decline-deep-seek-ai-cloudflare/id1477067604?i=1000689880877&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/USE_L2cAVhE)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=USE_L2cAVhE)
 
 
 
