--- a/_posts/2025-02-14-141.md
+++ b/_posts/2025-02-14-141.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#141 Prosto i praktycznie wyjaśniamy: kontenery'
+title: '#141 Prosto i praktycznie wyjaśniamy: Kontenery'
 date: 2025-02-14 08:00:00 +0200
 description: 
 episode: "141"
@@ -36,7 +36,7 @@ newsletter: |
   ➡️ [Apple Podcasts]()
 
 
-  ➡️ [YouTube](https://youtu.be/VpPn3mGWZ2E)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=VpPn3mGWZ2E)
 
 
 
