--- a/_posts/2025-02-14-141.md
+++ b/_posts/2025-02-14-141.md
@@ -6,7 +6,7 @@ description:
 episode: "141"
 tags: []
 spreaker: 64354315
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/prosto-i-praktycznie-wyja%C5%9Bniamy-kontenery/id1477067604?i=1000692160501&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -19,6 +19,13 @@ newsletter: |
   
 
 
+  Łukasz współorganizuje kolejną edycję Azure Day i z tej okazji mamy najlepszy kod zniżkowy!
+  TL;DR:
+  🗓️ 13 marca 2024
+  📍 Airport Hotel Okęcie, Warszawa
+  🎯 18 sesji technicznych, połowa prelegentów spoza Polski
+  💰 Kod zniżkowy `Lukasz25w3f57e` daje 25% rabatu
+  🔗 Szczegóły i rejestracja: <https://azureday.pl/>
   
 
 
@@ -30,10 +37,10 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/141)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6QYD0KpZsClszksGSWlu17)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/prosto-i-praktycznie-wyja%C5%9Bniamy-kontenery/id1477067604?i=1000692160501&uo=4)
 
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=VpPn3mGWZ2E)
