--- a/_posts/2025-02-21-142.md
+++ b/_posts/2025-02-21-142.md
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/142)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/2W7Zix7Uvqv9USY89oxXkE)
 
 
   ➡️ [Apple Podcasts]()
 
 
-  ➡️ [YouTube](https://youtu.be/H64L9F55XKc)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=H64L9F55XKc)
 
 
 
@@ -81,7 +81,20 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
-
+- [DeepSeek temporarily suspends API service top-ups](https://www.reuters.com/technology/artificial-intelligence/deepseek-temporarily-suspends-api-service-top-ups-2025-02-06/)
+- [OpenAI introduces ChatGPT Gov](https://www.itbrew.com/stories/2025/01/30/openai-introduces-chatgpt-gov)
+- [Big Tech lines up over $300bn in AI spending for 2025](https://www.ft.com/content/634b7ec5-10c3-44d3-ae49-2a5b9ad566fa)
+- [Announcing new Networking Troubleshooter preview - Azure App Service](https://azure.github.io/AppService/2025/02/04/Announcing-New-Networking-Troubleshooter.html)
+- [2025 Is the Last Year of Python Dominance in AI: Java Comin’](https://thenewstack.io/2025-is-the-last-year-of-python-dominance-in-ai-java-comin/)
+- [#134 JVM teraz i jego przyszłość z Jarosławem Pałką - Patoarchitekci](https://patoarchitekci.io/134/)
+- [Home/pages/licensing-patron-faq.md at master · Fody/Home · GitHub](https://github.com/Fody/Home/blob/master/pages/licensing-patron-faq.md)
+- [Staying in the Zone: How DoorDash used a service mesh to manage data transfer, reducing hops and cloud spend - DoorDash](https://careersatdoordash.com/blog/staying-in-the-zone-how-doordash-used-a-service-mesh-to-manage-data-transfer-reducing-hops-and-cloud-spend/)
+- [Quickstart: Deploy an Azure Kubernetes Service (AKS) Automatic cluster (preview) in a custom virtual network - Azure Kubernetes Service  ](https://learn.microsoft.com/en-us/azure/aks/automatic/quick-automatic-custom-network?pivots=azure-cli)
+- [Databases in 2024: A Year in Review // Blog // Andy Pavlo - Carnegie Mellon University](https://www.cs.cmu.edu/~pavlo/blog/2025/01/2024-databases-retrospective.html)
+- [Just Use Postgres!](https://www.manning.com/books/just-use-postgres)
+- [OpenAPI Initiative: New Standards and a Peek at the Roadmap](https://thenewstack.io/openapi-initiative-new-standards-and-a-peek-at-the-roadmap/)
+- [GitHub Copilot: The agent awakens - The GitHub Blog](https://github.blog/news-insights/product-news/github-copilot-the-agent-awakens/)
+- [The Postman Drop: Introducing the AI Agent Builder - Ask the Experts and Postman Tips - Postman Community](https://community.postman.com/t/the-postman-drop-introducing-the-ai-agent-builder/74203)
 
 ### Transkrypcja
 
