--- a/_posts/2025-02-21-142.md
+++ b/_posts/2025-02-21-142.md
@@ -6,7 +6,7 @@ description:
 episode: "142"
 tags: []
 spreaker: 64468425
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-65-java-vs-python-ai-battle-aks-network-tools/id1477067604?i=1000694645593&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -33,7 +33,7 @@ newsletter: |
   ➡️ [Spotify](https://open.spotify.com/episode/2W7Zix7Uvqv9USY89oxXkE)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-65-java-vs-python-ai-battle-aks-network-tools/id1477067604?i=1000694645593&uo=4)
 
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=H64L9F55XKc)
@@ -44,14 +44,29 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca: []()
+  ### Szymon poleca: [Dużo dobrego o bazach danych i o tym jak Cloudflare zarządza klastrami PostgreSQL](https://www.infoq.com/articles/cloudflare-distributed-postgres)
 
+  Rzadko kiedy zdarzają się tak przekrojowe artykuły gdzie wartość znajdzie każdy - od juniora developera, przez SRE a kończąc na osobie od baz danych. Ale zdarzają się i to jest jeden z nich.
+  Artkuł to streszczenie prelekcji o tym jak Cloudflare zarządza swoimi rozproszonymi klastrami PostgreSQL. I co tam jest poruszane?
+  - Architektura sieciowa
+  - Czym jest i jak działa replikacja w bazach relacyjnych
+  - Jak zarządzać dużymi klastrami PostgreSQL
+  - Problemy wydajnościowe - Connection Pooling i Load Balancing
+  - Analiza incydentu który zwiększył czasy odpowiedzi 80x
+  Dobry i długi artykuł. A jakby ktoś nie chciał czytać to można posłuchać prelekcji.
+
+
+  ### Łukasz poleca: [Kodowanie z LLM - przykład jak ułożyć flow](https://harper.blog/2025/02/16/my-llm-codegen-workflow-atm/)
+
+  Dobrze spisany przykład flow pracy z LLM przy kodowaniu. TL;DR:
   
-
-
-  ### Łukasz poleca: []()
-
+  - Burza mózgów i tworzenie specyfikacji
+  - Planowanie i rozbijanie projektu na małe kroki
+  - Wykonanie z użyciem narzędzi do generowania kodu (np. Claude, Aider)
   
+  Kluczowe IMHO jest punkt drugi, czyli rozbijanie tego faktycznie na małe kroki.
+  Do tego jeszcze coś, co podzielam z autorem wpisu: „A lot of my friends are like "fuck LLMs. They are terrible at everything." I don't mind this POV. I don't share it, but I think it is important to be skeptical."
+  Choć tak z obserwacji to ci od "fuck LLMs" używają go tylko po cichu, coś jak Ordo Iuris i ich tradycyjne wartości ;-)
 
 
 
