--- a/_posts/2025-02-28-143.md
+++ b/_posts/2025-02-28-143.md
@@ -6,7 +6,7 @@ description:
 episode: "143"
 tags: []
 spreaker: 64600280
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-66-cloud-revenue-q4-gpt-4o-copilot-opentofu-updates/id1477067604?i=1000696734269&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/143)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/7GThKDlEoUtnJ2LGsqI8tO)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-66-cloud-revenue-q4-gpt-4o-copilot-opentofu-updates/id1477067604?i=1000696734269&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/W7EF2ML1WX0)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=W7EF2ML1WX0)
 
 
 
