--- a/_posts/2025-03-07-144.md
+++ b/_posts/2025-03-07-144.md
@@ -6,7 +6,7 @@ description:
 episode: "144"
 tags: []
 spreaker: 64728840
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/okiem-c-level-cto-w-firmie-us%C5%82ugowej-z-tomkiem-onyszko/id1477067604?i=1000698229555&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/144)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1zxmyXaqRIP4GtUsBLPh8B)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/okiem-c-level-cto-w-firmie-us%C5%82ugowej-z-tomkiem-onyszko/id1477067604?i=1000698229555&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/N-dVZr4CJTk)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=N-dVZr4CJTk)
 
 
 
