--- a/_posts/2025-03-14-145.md
+++ b/_posts/2025-03-14-145.md
@@ -6,7 +6,7 @@ description:
 episode: "145"
 tags: []
 spreaker: 64856996
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-67-%C5%9Bliwka-i-bielik-allegro-llm-techtrends-antropic/id1477067604?i=1000699139117&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/145)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1UE2Df6egITM1349qgj56A)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-67-%C5%9Bliwka-i-bielik-allegro-llm-techtrends-antropic/id1477067604?i=1000699139117&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/FuRdxl_SyCQ)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=FuRdxl_SyCQ)
 
 
 
