--- a/_posts/2025-03-21-146.md
+++ b/_posts/2025-03-21-146.md
@@ -6,7 +6,7 @@ description:
 episode: "146"
 tags: []
 spreaker: 64989342
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-68-rozbijanie-monolit%C3%B3w-risc-v-w-europie-mierzenie/id1477067604?i=1000700235929&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/146)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6mCCK1bbGYSFsKcQzr3Itl)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-68-rozbijanie-monolit%C3%B3w-risc-v-w-europie-mierzenie/id1477067604?i=1000700235929&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/NsCYS4isDEo)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=NsCYS4isDEo)
 
 
 
