--- a/_posts/2025-03-28-147.md
+++ b/_posts/2025-03-28-147.md
@@ -6,7 +6,7 @@ description:
 episode: "147"
 tags: []
 spreaker: 65159355
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-68-rozbijanie-monolit%C3%B3w-risc-v-w-europie-mierzenie/id1477067604?i=1000700235929&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/147)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/7GMglierqVcPcgg698ZBNk)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-68-rozbijanie-monolit%C3%B3w-risc-v-w-europie-mierzenie/id1477067604?i=1000700235929&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/8l_H6RzpH2Y)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=8l_H6RzpH2Y)
 
 
 
