--- a/_posts/2025-04-04-148.md
+++ b/_posts/2025-04-04-148.md
@@ -6,7 +6,7 @@ description:
 episode: "148"
 tags: []
 spreaker: 65246842
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-70-kubernetes-security-region-cloud-disaster/id1477067604?i=1000702156917&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -30,13 +30,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/148)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/2GUP0qEjXlDULFTCEdvisn)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-70-kubernetes-security-region-cloud-disaster/id1477067604?i=1000702156917&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/hky49H8Ny0g)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=hky49H8Ny0g)
 
 
 
@@ -81,6 +81,7 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
+- [Rekrutujemy do Pato - Cloud/DevOps Engineer]( https://protopia.tech/recruitment/CloudEngDevOpsEng2025)
 - [Nie dla mięczaków: Patoszkolenia, które zmieniają zasady gry! - Patoarchitekci](https://patoarchitekci.io/szkolenia/)
 - [Kubescape becomes a CNCF incubating project  ](https://www.cncf.io/blog/2025/02/26/kubescape-becomes-a-cncf-incubating-project/)
 - [What Happens When An Azure Region Is Destroyed?  ](https://aidanfinn.com/?p=23946)
