--- a/_posts/2025-04-04-148.md
+++ b/_posts/2025-04-04-148.md
@@ -19,6 +19,21 @@ newsletter: |
   
 
 
+  ## Teraz dwa ogłoszenia:
+  1. Zatrudniamy - **Cloud/DevOps Engineer**
+  2. Wracamy ze szkoleniami
+  ### **Cloud/DevOps Engineer** na Full Time u nas!
+  Azure, K8s, IaC, GenAI i projekty, o których wspominaliśmy w podcaście. Oprócz tego możliwość uczestnictwa we wszystkich otwartych i zamkniętych szkoleniach Pato 😎
+  Szczegóły oferty na ➡️ <https://protopia.tech/recruitment/CloudEngDevOpsEng2025>
+  CV wyślij na nasz firmowy poważniejszy adres niż Pato, czyli [cooperation@](http://cooperation@protopia.tech)[protopia](mailto:cooperation@protopia.tech)[.tech](http://cooperation@protopia.tech). Nie wszyscy lubią określenie pato i naszego jednorożca🦄 😅
+  ### Wreszcie ogarnęliśmy się ze szkoleniami!
+  Szkolenia znajdziesz na <https://patoarchitekci.io/szkolenia/?promo={$promo_code}#oto-kursowe-patomenu>, a twoja zniżka to **{$promo\_discount}%** 😎
+  **Observability** od Szymona - **19-20 maja**
+  Naucz się, **jak monitorować systemy tak, by nie zbankrutować** – poznaj narzędzia, które są efektywne i nie zrujnują Twojego budżetu.
+  Szymon **pokieruje Cię przez labirynt narzędzi i technik,** które pomogą Ci zachować przejrzystość operacji bez obciążania zasobów. Dowiesz się, **jak implementować inteligentne systemy monitorujące,** które automatycznie adaptują się do zmieniających się warunków i potrzeb twojego środowiska IT.
+  **Architektura 101** od Łukasza - 4 spotkania po 4h: **13, 14, 20, 21 maja**
+  Rozpocznij swoją przygodę z architekturą IT od podstaw, ale na sterydach. Bez zbędnych teorii, tylko praktyczna wiedza z pierwszej ręki.
+  W tym szkoleniu Łukasz przekaże Ci nie tylko **fundamentalne zasady projektowania efektywnych systemów,** ale także pokaże, **jak teorie aplikować w codziennej pracy.** Odkryjesz, **jakie narzędzia i technologie są najbardziej efektywne w tworzeniu skalowalnych i bezpiecznych architektur IT.**
   
 
 
@@ -44,14 +59,16 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca: []()
+  ### Szymon poleca: [Bebechy współczesnych chmurowych baz danych](https://thenewstack.io/how-database-storage-engines-have-evolved-for-internet-scale/)
 
-  
+  Często z Łukaszem powtarzamy, że nie ma magii i dobrze jest rozumieć jak coś działa pod spodem. Dlatego tym razem wpis o tym jak zaprojektować skalowalną horyzontalnie i wydajną kosztowo bazę danych. 
+  Jedna uwaga, to, że wpis pisany przez osobę od Aerospike (choć bez oficjalnej informacji o sponsoringu) więc część z przymrużeniem oka :)
 
 
-  ### Łukasz poleca: []()
+  ### Łukasz poleca: [Feature-branches: Vanilla Kubernetes + Bitbucket pipelines](https://medium.com/@dedicatted/feature-branches-vanilla-kubernetes-bitbucket-pipelines-2ff3e45161cc)
 
-  
+  Coś pięknego! Czyli da się zrobić dynamiczne środowiska dla branchy bez kombinowania ;-)
+  Dobry przykład pokazujący, że da się tworzyć środowiska poglądowe naprawdę prosto, bez kombinacji, kilkoma prostymi skryptami i z wykorzystaniem prostego CI/CD na waniliowym Kubernetes.
 
 
 
