--- a/_posts/2025-04-11-149.md
+++ b/_posts/2025-04-11-149.md
@@ -6,7 +6,7 @@ description:
 episode: "149"
 tags: []
 spreaker: 65525624
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-71-programi%C5%9Bci-jednego-j%C4%99zyka-kafka-4-0-mercado/id1477067604?i=1000703120589&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -45,13 +45,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/149)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1vRLLb9VGWbotazwYAjcUP)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-71-programi%C5%9Bci-jednego-j%C4%99zyka-kafka-4-0-mercado/id1477067604?i=1000703120589&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/kgCipb-RMLY)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=kgCipb-RMLY)
 
 
 
@@ -59,14 +59,17 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca: []()
+  ### Szymon poleca: [Bebechy współczesnych chmurowych baz danych](https://thenewstack.io/how-database-storage-engines-have-evolved-for-internet-scale/)
 
-  
+  Często z Łukaszem powtarzamy, że nie ma magii i dobrze jest rozumieć jak coś działa pod spodem. Dlatego tym razem wpis o tym jak zaprojektować skalowalną horyzontalnie i wydajną kosztowo bazę danych. 
+  Jedna uwaga, to, że wpis pisany przez osobę od Aerospike (choć bez oficjalnej informacji o sponsoringu) więc część z przymrużeniem oka :)
 
 
-  ### Łukasz poleca: []()
+  ### Łukasz poleca: [GitHub Copilot: Agent mode w GA i....](https://github.blog/news-insights/product-news/github-copilot-agent-mode-activated/)
 
-  
+  GitHub Copilot Agent mode wjechał w GA (korporacyjnie dobra alternatywa do Cursor), ale.. 
+  ... też od Cursor zaczynają bawić się z cennikiem - Premium model requests. No limit jest bazowy OpenAI GPT-4o, a na resztę zależnie od tier zaczynamy 300 req na miesiąc i w górę oraz jest opcja włączenia pay as you go - $0.04 per request.
+  Co ciekawe Gemini 2.0 Flash ma przelicznik/mnożnik 0.25 za req.
 
 
 
